<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_alc"
        android:layout_width="148dp"
        android:layout_height="87dp"
        android:layout_marginTop="92dp"
        android:text="@string/button_alc"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_profile"
        android:layout_width="152dp"
        android:layout_height="77dp"
        android:layout_marginTop="92dp"
        android:text="@string/button_profile"
        app:layout_constraintEnd_toEndOf="@+id/button_alc"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="@+id/button_alc"
        app:layout_constraintTop_toBottomOf="@+id/button_alc" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:layout_marginTop="64dp"
        android:fontFamily="serif"
        android:lineSpacingExtra="24sp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>